--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-PyStemmer==1.2.0
-PyYAML==3.10
+PyStemmer==1.3.0
+PyYAML==3.11
 argparse==1.2.1
-cobe==2.1.0
-python-Levenshtein==0.10.2
-python-irclib==0.4.8
-simplejson==3.3.0
-twitter==1.10.0
+cobe==2.1.2
+python-Levenshtein==0.12.0
+simplejson==3.8.2
+twitter==1.17.1
 wsgiref==0.1.2
+redis==2.10.5
